--- a/files/icinga/cgi.cfg
+++ b/files/icinga/cgi.cfg
@@ -131,7 +131,7 @@ default_user_name=guest
 # not use authorization.  You may use an asterisk (*) to
 # authorize any user who has authenticated to the web server.
 
-authorized_for_system_information=tstarling,robh,mark,midom,laner,ariel,py,asher,dzahn,lcarr,jgreen,faidon,mwalker,khorn,pgehres,Catrope,akosiaris
+authorized_for_system_information=tstarling,robh,mark,midom,laner,ariel,py,asher,dzahn,lcarr,jgreen,faidon,mwalker,khorn,pgehres,Catrope,akosiaris,springle
 
 
 # CONFIGURATION INFORMATION ACCESS
@@ -142,7 +142,7 @@ authorized_for_system_information=tstarling,robh,mark,midom,laner,ariel,py,asher
 # an asterisk (*) to authorize any user who has authenticated
 # to the web server.
 
-authorized_for_configuration_information=tstarling,robh,mark,midom,laner,ariel,py,asher,dzahn,lcarr,jgreen,faidon,mwalker,khorn,pgehres,Catrope,akosiaris
+authorized_for_configuration_information=tstarling,robh,mark,midom,laner,ariel,py,asher,dzahn,lcarr,jgreen,faidon,mwalker,khorn,pgehres,Catrope,akosiaris,springle
 
 
 
@@ -155,7 +155,7 @@ authorized_for_configuration_information=tstarling,robh,mark,midom,laner,ariel,p
 # You may use an asterisk (*) to authorize any user who has
 # authenticated to the web server.
 
-authorized_for_system_commands=tstarling,robh,mark,midom,laner,ariel,py,asher,dzahn,lcarr,jgreen,faidon,mwalker,khorn,pgehres,Catrope,akosiaris
+authorized_for_system_commands=tstarling,robh,mark,midom,laner,ariel,py,asher,dzahn,lcarr,jgreen,faidon,mwalker,khorn,pgehres,Catrope,akosiaris,springle
 
 
 # GLOBAL HOST/SERVICE VIEW ACCESS
@@ -181,8 +181,8 @@ authorized_for_all_hosts=*
 # authorization).  You may use an asterisk (*) to authorize any
 # user who has authenticated to the web server.
 
-authorized_for_all_service_commands=tstarling,robh,mark,midom,laner,ariel,py,asher,dzahn,lcarr,jgreen,faidon,mwalker,khorn,pgehres,Catrope,akosiaris
-authorized_for_all_host_commands=tstarling,robh,mark,midom,laner,ariel,py,asher,dzahn,lcarr,jgreen,faidon,mwalker,khorn,pgehres,Catrope,akosiaris
+authorized_for_all_service_commands=tstarling,robh,mark,midom,laner,ariel,py,asher,dzahn,lcarr,jgreen,faidon,mwalker,khorn,pgehres,Catrope,akosiaris,springle
+authorized_for_all_host_commands=tstarling,robh,mark,midom,laner,ariel,py,asher,dzahn,lcarr,jgreen,faidon,mwalker,khorn,pgehres,Catrope,akosiaris,springle
 
 
 
