update submodules url so they end with '.git'
The Jenkins git plugin is confused whenever a remote URL does not end
with '.git'. For some reason, it would consider it a local repository
and use a relative path:

When cloning /srv/ssd/zuul/git/operations/puppet , it expectes the
'modules/cdh4' repo to be at:

/srv/ssd/zuul/git/operations/puppet/modules/cdh4

Which does not exit because cdh4 is not registered in Zuul :-D

Change-Id: I0899a549dbb45a1d20e3accc4b8a5473588536fd

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "modules/cdh4"]
 	path = modules/cdh4
-	url = https://gerrit.wikimedia.org/r/operations/puppet/cdh4
+	url = https://gerrit.wikimedia.org/r/operations/puppet/cdh4.git
 [submodule "modules/zookeeper"]
 	path = modules/zookeeper
-	url = https://gerrit.wikimedia.org/r/operations/puppet/zookeeper
+	url = https://gerrit.wikimedia.org/r/operations/puppet/zookeeper.git
 [submodule "modules/jmxtrans"]
 	path = modules/jmxtrans
-	url = https://gerrit.wikimedia.org/r/operations/puppet/jmxtrans
+	url = https://gerrit.wikimedia.org/r/operations/puppet/jmxtrans.git
 [submodule "modules/kafka"]
 	path = modules/kafka
-	url = https://gerrit.wikimedia.org/r/p/operations/puppet/kafka
+	url = https://gerrit.wikimedia.org/r/p/operations/puppet/kafka.git
