--- a/files/dhcpd/dhcpd.conf
+++ b/files/dhcpd/dhcpd.conf
@@ -1,5 +1,5 @@
 #####################################################################
-#### THIS FILE IS MANAGED BY PUPPET 
+#### THIS FILE IS MANAGED BY PUPPET
 #### puppet:///files/dhcpd/dhcpd.conf
 ######################################################################
 
@@ -53,11 +53,11 @@ subnet 208.80.152.128 netmask 255.255.255.192 {
 subnet 208.80.153.128 netmask 255.255.255.192 {
     authoritative;
 
-    option subnet-mask 255.255.255.192;	
+    option subnet-mask 255.255.255.192;
     option broadcast-address 208.80.153.191;
     option routers 208.80.153.129;
     option domain-name "wikimedia.org";
-    
+
     next-server 208.80.152.171; # brewster (tftp server)
 }
 
@@ -108,7 +108,7 @@ subnet 10.4.16.0 netmask 255.255.255.0 {
 	next-server 208.80.152.171; # brewster (tftp server)
 }
 
-# 
+#
 # EQIAD
 #
 
@@ -245,7 +245,7 @@ subnet 10.64.36.0 netmask 255.255.255.0 {
 	next-server 208.80.154.10; # carbon (tftp server)
 }
 
-# 
+#
 # ESAMS
 #
 
@@ -288,7 +288,7 @@ subnet 198.35.26.0 netmask 255.255.255.240 {
 	option routers 198.35.26.1;
 	option domain-name "wikimedia.org";
 
-	next-server 208.80.154.10; # carbon (tftp server)
+	next-server 198.35.26.5; # bast4001 (tftp server)
 }
 
 #
