Adding private ULSFO subnet in dhcpd.conf
Change-Id: Ibe002d4b8a7070eef8d5677d0f36d5509561ecaf

--- a/files/dhcpd/dhcpd.conf
+++ b/files/dhcpd/dhcpd.conf
@@ -291,6 +291,18 @@ subnet 198.35.26.0 netmask 255.255.255.240 {
 	next-server 198.35.26.5; # bast4001 (tftp server)
 }
 
+# private1-ulsfo subnet
+subnet 10.128.0.0 netmask 255.255.255.0 {
+	authoritative;
+
+	option subnet-mask 255.255.255.0;
+	option broadcast-address 10.128.0.255;
+	option routers 10.128.0.1;
+	option domain-name "ulsfo.wmnet";
+
+	next-server 198.35.26.5; # bast4001 (tftp server)
+}
+
 #
 # Linux installation hosts
 #
