--- a/files/autoinstall/netboot.cfg
+++ b/files/autoinstall/netboot.cfg
@@ -40,10 +40,11 @@ d-i	preseed/include_command	string	\
 		boron|chromium|hydrogen) echo partman/lvm.cfg ;; \
 		calcium|helium|potassium|tmh1001|tmh1002) echo partman/raid1-1partition.cfg ;; \
 		capella) echo partman/lvs.cfg ;; \
-		cp102[1-9]|cp10[3-6][0-9]|cp1070|cp30[0-9][0-9]|sq6[7-9]|sq70|dysprosium) echo partman/raid1-varnish.cfg ;; \
+		cp102[1-9]|cp10[3-6][0-9]|cp1070|cp[34]0[0-9][0-9]|sq6[7-9]|sq70|dysprosium) echo partman/raid1-varnish.cfg ;; \
 		antimony|barium|celsus|cerium|erbium|europium|gadolinium|holmium|magnesium|neodymium|palladium|promethium|rubidium|strontium|terbium|titanium|xenon|wtp100[1-4]) echo partman/lvm.cfg ;; \
 		constable|kuo|lardner|mexia|tola) echo partman/lvm.cfg ;; \
-		lvs*) echo partman/lvs.cfg ;; \
+		lvs[1-6]|lvs100*) echo partman/lvs.cfg ;; \
+		lvs400*) echo partman/raid1-lvm.cfg ;; \
 		ekrem) echo partman/raid1.cfg ;; \
 		eeden) echo partman/raid1-1partition.cfg ;; \
 		iodine) echo partman/raid1-1partition.cfg ;; \
