--- a/files/autoinstall/netboot.cfg
+++ b/files/autoinstall/netboot.cfg
@@ -56,8 +56,9 @@ d-i	preseed/include_command	string	\
 		ms-fe[1-4]) echo partman/raid1-1partition.cfg ;; \
 		ms-be[1-9]|ms-be1[0-2]) echo partman/ms-be-ssd.cfg ;; \
 		ms-fe10[0-9][0-9]) echo partman/raid1-1partition.cfg ;; \
-		ms-be10[0-9][0-9]) echo partman/ms-be-ssd.cfg ;; \
-		ms-be30[0-9][0-9]) echo partman/raid1-varnish.cfg ;; \
+		ms-be10[0-9][0-9]) echo partman/ms-be-eqiad.cfg ;; \
+		ms-fe30[0-9][0-9]) echo partman/raid1-1partition.cfg ;; \
+		ms-be30[0-9][0-9]) echo partman/ceph-ssd.cfg ;; \
 		labsdb[1-3]|mw[0-9]*|srv[0-9]*|bast*) echo partman/mw.cfg ;; \
 		labsdb100[1-3]) echo partman/mw.cfg ;; \
 		nickel) echo partman/raid1.cfg ;; \
