--- a/files/autoinstall/netboot.cfg
+++ b/files/autoinstall/netboot.cfg
@@ -36,7 +36,8 @@ d-i	preseed/include_command	string	\
 		analytics100[1-9]|analytics1010) echo partman/analytics-cisco.cfg ;; \
 		analytics101[1-9]|analytics102[0-2]) echo partman/raid1-30G.cfg ;; \
 		analytics102[3-7]) echo partman/analytics-dell.cfg ;; \
-		bayes|db[0-8][0-9]|db10[0-6][0-9]|es10[0-2][0-9]|es[0-9]|es1[0-9]|netmon1001|stat1002|tungsten) echo partman/es.cfg ;; \
+		db[0-8][0-9]|db10[0-6][0-9]|es10[0-2][0-9]|es[0-9]|es1[0-9]) echo partman/db.cfg ;; \
+		bayes|netmon1001|stat1002|tungsten) echo partman/db.cfg ;; \
 		boron|chromium|hydrogen) echo partman/lvm.cfg ;; \
 		calcium|helium|potassium|tmh1001|tmh1002) echo partman/raid1-1partition.cfg ;; \
 		capella) echo partman/lvs.cfg ;; \
