--- a/files/autoinstall/netboot.cfg
+++ b/files/autoinstall/netboot.cfg
@@ -48,6 +48,7 @@ d-i	preseed/include_command	string	\
 		lvs400*) echo partman/raid1-lvm.cfg ;; \
 		ekrem) echo partman/raid1.cfg ;; \
 		eeden) echo partman/raid1-1partition.cfg ;; \
+		erzurumi) echo partman/raid1-1partition.cfg ;; \
 		iodine) echo partman/raid1-1partition.cfg ;; \
 		lithium|beryllium) echo partman/mw.cfg ;; \
 #		sodium) echo partman/mailserver.cfg ;; \
