Add SPDY support to dynamicproxy
Change-Id: I265341992636cc270867a51ecff0266c6a9412d2

--- a/modules/dynamicproxy/templates/proxy.conf
+++ b/modules/dynamicproxy/templates/proxy.conf
@@ -12,7 +12,7 @@ server {
 
     <%- if @ssl_certificate_name != false -%>
     # Serve both HTTP and HTTPS
-    listen 443 default_server ssl;
+    listen 443 default_server ssl spdy;
 
     ssl_certificate /etc/ssl/certs/<%= @ssl_certificate_name %>.pem;
     ssl_certificate_key /etc/ssl/private/<%= @ssl_certificate_name %>.key;
