graphite: tweak statsd aggregation
Following upstream documentation tweak statsd aggregation following
upstream documentation at:

https://github.com/etsy/statsd/blob/master/docs/graphite.md

This DOES NOT affect existing metrics.  We probably want to adjust
existing one.

Change-Id: I39dfce78bd48be97d091230c6e8d50e08e27b819

--- a/files/graphite/storage-aggregation.conf
+++ b/files/graphite/storage-aggregation.conf
@@ -32,6 +32,38 @@ pattern = \.count$
 xFilesFactor = 0
 aggregationMethod = sum
 
+
+# Defaults for statsd:
+# See Statsd documentation:
+# https://github.com/etsy/statsd/blob/master/docs/graphite.md
+# lower/upper/sum are send for all timers (stats.timers)
+[min]
+pattern = \.lower$
+xFilesFactor = 0
+aggregationMethod = min
+
+[max]
+pattern = \.upper$
+xFilesFactor = 0
+aggregationMethod = max
+
+[sum]
+pattern = \.sum$
+xFilesFactor = 0
+aggregationMethod = sum
+
+[count]
+pattern = \.count$
+xFilesFactor = 0
+aggregationMethod = sum
+
+[count_legacy]
+pattern = ^stats_counts\.
+xFilesFactor = 0
+aggregationMethod = sum
+
+# End of 'Defaults for statsd'
+
 # Stats `stats.*` are counts per seconds, we aggregate them by sum and make
 # sure we keep any metric even if it is missing some points.
 [stats]
