graphite: make sure we aggregate min/max/count properly
The default aggregator in graphite will make metrics ending with 'min'
to be aggregated by their minimum which seems to make sense for long
series.  Similary 'max' are aggregated by 'max' and 'counts' by sum.

Previously, any min/max metrics under the `stats` hierarchy were
aggregated with sum which is not that nice.

Change-Id: I4f6ecb0378114b2fb155b19c8e25dfa270515266
Note: rules are proceeded in order, first match win.

--- a/files/graphite/storage-aggregation.conf
+++ b/files/graphite/storage-aggregation.conf
@@ -15,7 +15,25 @@
 #
 #   http://graphite.readthedocs.org/en/latest/config-carbon.html
 #
+[min]
+pattern = \.min$
+xFilesFactor = 0.1
+aggregationMethod = min
 
+# Default from graphite
+[max]
+pattern = \.max$
+xFilesFactor = 0.1
+aggregationMethod = max
+
+# Default from graphite
+[sum]
+pattern = \.count$
+xFilesFactor = 0
+aggregationMethod = sum
+
+# Stats `stats.*` are counts per seconds, we aggregate them by sum and make
+# sure we keep any metric even if it is missing some points.
 [stats]
 pattern = ^stats\.
 xFilesFactor = 0
