DynamicProxy: Increase read timeout
Change-Id: Iafb963a409930e81656cb83b1ce0ed31b146bad2

--- a/modules/dynamicproxy/templates/proxy.conf
+++ b/modules/dynamicproxy/templates/proxy.conf
@@ -30,6 +30,11 @@ server {
     ssl_prefer_server_ciphers on;
     <%- end -%>
 
+    # Some projects have tools that take data in and process them
+    # for a long time. While ideally they should be made async, this
+    # is an interim solution that works for now.
+    proxy_read_timeout 600s;
+
     location / {
         set $backend '';
         set $vhost '';
