--- a/files/autoinstall/netboot.cfg
+++ b/files/autoinstall/netboot.cfg
@@ -42,7 +42,7 @@ d-i	preseed/include_command	string	\
 		calcium|helium|potassium|tmh1001|tmh1002) echo partman/raid1-1partition.cfg ;; \
 		capella) echo partman/lvs.cfg ;; \
 		cp102[1-9]|cp10[3-6][0-9]|cp1070|cp[34]0[0-9][0-9]|sq6[7-9]|sq70|dysprosium) echo partman/raid1-varnish.cfg ;; \
-		antimony|barium|celsus|cerium|erbium|europium|gadolinium|holmium|magnesium|neodymium|palladium|promethium|rubidium|strontium|terbium|titanium|xenon|wtp100[1-4]) echo partman/lvm.cfg ;; \
+		antimony|barium|celsus|erbium|europium|gadolinium|holmium|magnesium|neodymium|palladium|promethium|rubidium|strontium|terbium|titanium|wtp100[1-4]) echo partman/lvm.cfg ;; \
 		constable|kuo|lardner|mexia|tola) echo partman/lvm.cfg ;; \
 		lvs[1-6]|lvs100*) echo partman/lvs.cfg ;; \
 		lvs400*) echo partman/raid1-lvm.cfg ;; \
@@ -71,7 +71,7 @@ d-i	preseed/include_command	string	\
 		search[0-9]*) echo partman/search.cfg ;; \
 		snapshot[1-4]|snapshot100[1-4]) echo partman/snapshot.cfg ;; \
 		stat1002) echo partman/lvm-noraid-large.a.cfg ;; \
-		bast4001|copper|emery|neon|harmon|ssl[1-3]0[0-9][0-9]|ssl[0-9]|ytterbium|zirconium) echo partman/raid1-lvm.cfg ;; \
+		bast4001|cerium|copper|emery|harmon|neon|praseodymium|ssl[1-3]0[0-9][0-9]|ssl[0-9]|ytterbium|xenon|zirconium) echo partman/raid1-lvm.cfg ;; \
 		solr[1-3]|solr100[1-3]) echo partman/lvm.cfg ;; \
 		virt[5-9]|virt1[0-6]) echo partman/virt-raid10-cisco.cfg ;; \
 		virt100[1-3]) echo partman/virt-raid10-cisco-ceph.cfg ;; \
