--- a/modules/eventlogging/files/init/consumer.conf
+++ b/modules/eventlogging/files/init/consumer.conf
@@ -17,3 +17,5 @@ setgid eventlogging
 exec eventlogging-consumer "@$CONFIG"
 
 respawn
+respawn limit 30 300     # Give up if started >30 times in last 5 minutes.
+post-stop exec sleep 5   # Sleep 5 seconds between attempts to start.
