Move the proxy API to a port 5668
Change-Id: I0a738cb53b66e2fe579222d50df96335cf4a24e5

--- a/modules/dynamicproxy/templates/proxy.conf
+++ b/modules/dynamicproxy/templates/proxy.conf
@@ -5,6 +5,19 @@ map $http_upgrade $connection_upgrade {
         ''      close;
 }
 
+# Run the proxy api on port 5668; a firewall rule
+# will open this only for wikitech.
+server {
+    listen   5668;
+
+    location /dynamicproxy-api {
+        include uwsgi_params;
+        uwsgi_pass unix:///tmp/uwsgi.sock;
+        uwsgi_param SCRIPT_NAME /dynamicproxy-api;
+        uwsgi_modifier1 30;
+    }
+}
+
 server {
     resolver 10.4.0.1;
 
@@ -34,13 +47,6 @@ server {
     # for a long time. While ideally they should be made async, this
     # is an interim solution that works for now.
     proxy_read_timeout 600s;
-
-    location /dynamicproxy-api {
-        include uwsgi_params;
-        uwsgi_pass unix:///tmp/uwsgi.sock;
-        uwsgi_param SCRIPT_NAME /dynamicproxy-api;
-        uwsgi_modifier1 30;
-    }
 
     location / {
         set $backend '';
