--- a/files/icinga/timeperiods.cfg
+++ b/files/icinga/timeperiods.cfg
@@ -8,7 +8,7 @@ define timeperiod{
     thursday        00:00-24:00
     friday          00:00-24:00
     saturday        00:00-24:00
-    }
+}
 
 define timeperiod {
     timeperiod_name    CET_awake_hours
@@ -23,20 +23,20 @@ define timeperiod {
 }
 
 define timeperiod {
-    timeperiod_name    EDT_awake_early_hours
-    alias           EDT 0700 til 2300, 7 days a week
-    sunday          00:00-03:00,11:00-24:00
-    monday          00:00-03:00,11:00-24:00
-    tuesday         00:00-03:00,11:00-24:00
-    wednesday       00:00-03:00,11:00-24:00
-    thursday        00:00-03:00,11:00-24:00
-    friday          00:00-03:00,11:00-24:00
-    saturday        00:00-03:00,11:00-24:00
+    timeperiod_name    CEST_awake_hours
+    alias           CET 8 am till midnight, 7 days a week
+    sunday          06:00-22:00
+    monday          06:00-22:00
+    tuesday         06:00-22:00
+    wednesday       06:00-22:00
+    thursday        06:00-22:00
+    friday          06:00-22:00
+    saturday        06:00-22:00
 }
 
 define timeperiod {
     timeperiod_name    EST_awake_hours
-    alias           EST 0800 til midnight, 7 days a week
+    alias           EST 0800 till midnight, 7 days a week
     sunday          00:00-05:00,13:00-24:00
     monday          00:00-05:00,13:00-24:00
     tuesday         00:00-05:00,13:00-24:00
@@ -47,8 +47,44 @@ define timeperiod {
 }
 
 define timeperiod {
-    timeperiod_name    PDT_awake_hours
-    alias           PDT 8 am till midnight, 7 days a week
+    timeperiod_name    EST_awake_early_hours
+    alias           EST 0700 till 2300, 7 days a week
+    sunday          00:00-04:00,12:00-24:00
+    monday          00:00-04:00,12:00-24:00
+    tuesday         00:00-04:00,12:00-24:00
+    wednesday       00:00-04:00,12:00-24:00
+    thursday        00:00-04:00,12:00-24:00
+    friday          00:00-04:00,12:00-24:00
+    saturday        00:00-04:00,12:00-24:00
+}
+
+define timeperiod {
+    timeperiod_name    EDT_awake_hours
+    alias           EDT 0800 till midnight, 7 days a week
+    sunday          00:00-04:00,12:00-24:00
+    monday          00:00-04:00,12:00-24:00
+    tuesday         00:00-04:00,12:00-24:00
+    wednesday       00:00-04:00,12:00-24:00
+    thursday        00:00-04:00,12:00-24:00
+    friday          00:00-04:00,12:00-24:00
+    saturday        00:00-04:00,12:00-24:00
+}
+
+define timeperiod {
+    timeperiod_name    EDT_awake_early_hours
+    alias           EDT 0700 till 2300, 7 days a week
+    sunday          00:00-03:00,11:00-24:00
+    monday          00:00-03:00,11:00-24:00
+    tuesday         00:00-03:00,11:00-24:00
+    wednesday       00:00-03:00,11:00-24:00
+    thursday        00:00-03:00,11:00-24:00
+    friday          00:00-03:00,11:00-24:00
+    saturday        00:00-03:00,11:00-24:00
+}
+
+define timeperiod {
+    timeperiod_name    PST_awake_hours
+    alias           PST 8 am till midnight, 7 days a week
     sunday          00:00-08:00,16:00-24:00
     monday          00:00-08:00,16:00-24:00
     tuesday         00:00-08:00,16:00-24:00
@@ -58,3 +94,14 @@ define timeperiod {
     saturday        00:00-08:00,16:00-24:00
 }
 
+define timeperiod {
+    timeperiod_name    PDT_awake_hours
+    alias           PDT 8 am till midnight, 7 days a week
+    sunday          00:00-07:00,15:00-24:00
+    monday          00:00-07:00,15:00-24:00
+    tuesday         00:00-07:00,15:00-24:00
+    wednesday       00:00-07:00,15:00-24:00
+    thursday        00:00-07:00,15:00-24:00
+    friday          00:00-07:00,15:00-24:00
+    saturday        00:00-07:00,15:00-24:00
+}
