--- a/modules/generic/files/upstart/dynamicproxy-api.conf
+++ b/modules/generic/files/upstart/dynamicproxy-api.conf
@@ -1,10 +1,11 @@
 description	"API for the dynamic proxy, aka Invisible Unicorn"
 
 start on runlevel [2345]
+stop on runlevel [!2345]
 
 respawn
 respawn limit 10 5
 
 script
-    /usr/bin/dynamicproxy-api
+    /usr/bin/uwsgi --logto /var/log/uwsgi/app/invisible.log --buffer-size=32768 --plugin python --die-on-term --http-socket=127.0.0.1:3031 --module invisible_unicorn.api --callable app --processes 4 --threads 2 --master true
 end script
