Switch to using uwsgi for the proxy api
Change-Id: I797d8f5e96e0dcc504668b1cd8832aa2e5de6e41

--- a/files/upstart/dynamicproxy-api.conf
+++ b/files/upstart/dynamicproxy-api.conf
@@ -6,5 +6,5 @@ respawn
 respawn limit 10 5
 
 script
-    /usr/bin/dynamicproxy-api
+    /usr/bin/uwsgi --plugin python --socket=127.0.0.1:3031 --module invisible_unicorn.api --callable app --processes 4 --threads 2 --master true
 end script
