--- a/modules/dynamicproxy/templates/proxy.conf
+++ b/modules/dynamicproxy/templates/proxy.conf
@@ -35,6 +35,13 @@ server {
     # is an interim solution that works for now.
     proxy_read_timeout 600s;
 
+    location /dynamicproxy-api {
+        include uwsgi_params;
+        uwsgi_pass unix:///tmp/uwsgi.sock;
+        uwsgi_param SCRIPT_NAME /dynamicproxy-api;
+        uwsgi_modifier1 30;
+    }
+
     location / {
         set $backend '';
         set $vhost '';
