--- a/modules/generic/files/upstart/twemproxy.conf
+++ b/modules/generic/files/upstart/twemproxy.conf
@@ -1,3 +1,8 @@
+# vim: set ft=upstart:
+
+# Upstart job configuration for twemproxy
+# This file is managed by Puppet
+
 description "twemproxy"
 
 start on (net-device-up
