--- a/files/autoinstall/netboot.cfg
+++ b/files/autoinstall/netboot.cfg
@@ -43,7 +43,7 @@ d-i	preseed/include_command	string	\
 		capella) echo partman/lvs.cfg ;; \
 		cp102[1-9]|cp10[3-6][0-9]|cp1070|cp[34]0[0-9][0-9]|sq6[7-9]|sq70|dysprosium) echo partman/raid1-varnish.cfg ;; \
 		antimony|arsenic|barium|celsus|erbium|gadolinium|holmium|magnesium|neodymium|promethium|rubidium|terbium|titanium|wtp100[1-4]) echo partman/lvm.cfg ;; \
-		constable|kuo|lardner|mexia|tola) echo partman/lvm.cfg ;; \
+		kuo|lardner|mexia|tola) echo partman/lvm.cfg ;; \
 		lvs[1-6]|lvs100*) echo partman/lvs.cfg ;; \
 		lvs400*) echo partman/raid1-lvm.cfg ;; \
 		ekrem) echo partman/raid1.cfg ;; \
