zuul: configuration for gearman
The next Zuul version we are going to deploy rely on gearman to trigger
jobs. The Jenkins master being a gearman worker.

This change is loosely based on OpenStack Foundation configuration and
brings:
- gearman_server and gearman_server_start parameters
- logging configuration for the gearman server integrated in Zuul and
  for its client side

Change-Id: Ibb146442870c0409988a0728769887dbccef9b3c

--- a/files/zuul/logging.conf
+++ b/files/zuul/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,zuul,gerrit
+keys=root,zuul,gerrit,gear
 
 [handlers]
 keys=console,debug,normal
@@ -20,6 +20,11 @@ qualname=zuul
 level=INFO
 handlers=debug,normal
 qualname=gerrit
+
+[logger_gear]
+level=DEBUG
+handlers=debug,normal
+qualname=gear
 
 [handler_console]
 level=WARNING
