Setting up varnishkafka on mobile varnish caches.
Change-Id: I23d545e48b9046dd6d54df2281b3d76c82758771

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "modules/kafka"]
 	path = modules/kafka
 	url = https://gerrit.wikimedia.org/r/p/operations/puppet/kafka
+[submodule "modules/varnishkafka"]
+	path = modules/varnishkafka
+	url = https://gerrit.wikimedia.org/r/operations/puppet/varnishkafka
