--- a/files/autoinstall/netboot.cfg
+++ b/files/autoinstall/netboot.cfg
@@ -67,7 +67,7 @@ d-i	preseed/include_command	string	\
 		nickel) echo partman/raid1.cfg ;; \
 		osm-cp*) echo partman/mw.cfg ;; \
 		pc[1-3]|pc100[1-3]) echo partman/mw.cfg ;; \
-		rdb100[1-4]|testsearch100[1-3]) echo partman/mw.cfg ;; \
+		elastic100[0-9]|elastic101[1-6]|rdb100[1-4]|testsearch100[1-3]) echo partman/mw.cfg ;; \
 		searchidx*) echo partman/searchidx.cfg ;; \
 		search[0-9]*) echo partman/search.cfg ;; \
 		snapshot[1-4]|snapshot100[1-4]) echo partman/snapshot.cfg ;; \
