Change default ferm policy to DROP
In order to achieve this we need to allow established, related packets
so that connections don't timeout.

Change-Id: I6577403d2fa7a56d2d2a741aa920fdab2c0684cd

--- a/modules/base/files/firewall/main-minimal.conf
+++ b/modules/base/files/firewall/main-minimal.conf
@@ -6,9 +6,19 @@
 # basic minimal ruleset
 domain (ip ip6) {
 	chain INPUT {
-		policy ACCEPT;
+		policy DROP;
+
+		# connection tracking
+		mod state state INVALID DROP;
+		mod state state (ESTABLISHED RELATED) ACCEPT;
+
+		# allow local packet
 		interface lo ACCEPT;
-		mod pkttype pkt-type multicast ACCEPT;
+
+		# respond to ping
 		proto icmp ACCEPT;
+
+		# Allow multicast packets
+		mod pkttype pkt-type multicast ACCEPT;
 	}
 }
