add dhcp and partman for rhodium
Change-Id: I6d32844ed7412e0d63f9151aa48aaa6e50a9618e

--- a/files/autoinstall/netboot.cfg
+++ b/files/autoinstall/netboot.cfg
@@ -67,6 +67,7 @@ d-i	preseed/include_command	string	\
 		nickel) echo partman/raid1.cfg ;; \
 		osm-cp*) echo partman/mw.cfg ;; \
 		pc[1-3]|pc100[1-3]) echo partman/mw.cfg ;; \
+		rhodium*) echo partman/mw.cfg ;; \
 		elastic100[0-9]|elastic101[0-6]|rdb100[1-4]|testsearch100[1-3]) echo partman/mw.cfg ;; \
 		searchidx*) echo partman/searchidx.cfg ;; \
 		search[0-9]*) echo partman/search.cfg ;; \
