--- a/modules/dynamicproxy/templates/proxy.conf
+++ b/modules/dynamicproxy/templates/proxy.conf
@@ -35,6 +35,10 @@ server {
     # is an interim solution that works for now.
     proxy_read_timeout 600s;
 
+    # People upload large files, and that is okay.
+    # We can make this larger if need be.
+    client_max_body_size 128m;
+
     location /dynamicproxy-api {
         include uwsgi_params;
         uwsgi_pass unix:///tmp/uwsgi.sock;
