dynamicproxy: Make 404 fallback servers configurable
Change-Id: I33d05fecee01d6db0c350d9200ea88c7a2f34e86

--- a/modules/dynamicproxy/templates/proxy.conf
+++ b/modules/dynamicproxy/templates/proxy.conf
@@ -18,6 +18,15 @@ server {
     }
 }
 
+
+<%- if !@notfound_servers.empty? -%>
+upstream notfound {
+    <%- @notfound_servers.each do |server| -%>
+    server <%= server %>;
+    <%- end -%>
+}
+<%- end -%>
+
 server {
     resolver 10.4.0.1;
 
@@ -51,6 +60,13 @@ server {
     # People upload large files, and that is okay.
     # We can make this larger if need be.
     client_max_body_size 128m;
+
+    <%- if !@notfound_servers.empty? -%>
+    location @notfound {
+        proxy_pass  http://notfound;
+    }
+    error_page 404 = @notfound;
+    <%- end -%>
 
     location / {
         set $backend '';
