Collection Renderer (Now a module!)
Change-Id: I3c95af9a64a7d5830687cf3657c9afa6635a680f

--- a/modules/ocg_collection/files/ocg-collection.conf
+++ b/modules/ocg_collection/files/ocg-collection.conf
@@ -2,7 +2,7 @@
 
 #####################################################################
 ### THIS FILE IS MANAGED BY PUPPET
-### puppet:///files/misc/ocg-collection.msc
+### puppet:///ocg_collection/ocg-collection.conf
 #####################################################################
 
 # Upstart configuration file for the MediaWiki Collection extension OCG
@@ -12,6 +12,9 @@ description "MediaWiki Collection Offline Content Generator"
 start on (local-filesystems and net-device-up IFACE!=lo)
 stop on runlevel [!2345]
 
-exec /var/lib/ocg/collection/mw-collection-ocg.js -c /etc/ocg/mw-collection-ocg.json
+setuid ocg-collection
+setgid ocg-collection
+
+exec /srv/deployment/ocg_collection/mw-collection-ocg.js -c /etc/ocg-collection.js
 
 respawn
