Collection Renderer (Now a module!)
Change-Id: I3c95af9a64a7d5830687cf3657c9afa6635a680f

--- a/modules/ocg_collection/files/ocg-collection.conf
+++ b/modules/ocg_collection/files/ocg-collection.conf
@@ -2,7 +2,7 @@
 
 #####################################################################
 ### THIS FILE IS MANAGED BY PUPPET
-### puppet:///files/misc/ocg-collection.msc
+### /modules/ocg_collection/templates/ocg-collection.conf
 #####################################################################
 
 # Upstart configuration file for the MediaWiki Collection extension OCG
@@ -12,6 +12,12 @@ description "MediaWiki Collection Offline Content Generator"
 start on (local-filesystems and net-device-up IFACE!=lo)
 stop on runlevel [!2345]
 
-exec /var/lib/ocg/collection/mw-collection-ocg.js -c /etc/ocg/mw-collection-ocg.json
+setuid ocg-collection
+setgid ocg-collection
+
+script
+    PATH=$PATH:"<%= @deploy_path %>/node_modules/.bin"
+    mediawiki-collection-ocg -c /etc/ocg-collection.js
+end script
 
 respawn
