--- a/files/icinga/cgi.cfg
+++ b/files/icinga/cgi.cfg
@@ -131,7 +131,7 @@ default_user_name=guest
 # not use authorization.  You may use an asterisk (*) to
 # authorize any user who has authenticated to the web server.
 
-authorized_for_system_information=tim starling,robh,mark bergsma,domas,ryan lane,asher,arielglenn,cmjohnson,dzahn,lcarr,jgreen,faidon liambotis,mwalker,katie horn,pgehres,catrope,akosiaris,springle,ori.livneh
+authorized_for_system_information=tim starling,robh,mark bergsma,domas,ryan lane,asher,arielglenn,cmjohnson,dzahn,lcarr,jgreen,faidon liambotis,mwalker,katie horn,pgehres,catrope,akosiaris,springle,ori.livneh,gage
 
 
 # CONFIGURATION INFORMATION ACCESS
@@ -142,7 +142,7 @@ authorized_for_system_information=tim starling,robh,mark bergsma,domas,ryan lane
 # an asterisk (*) to authorize any user who has authenticated
 # to the web server.
 
-authorized_for_configuration_information=tim starling,robh,mark bergsma,domas,ryan lane,asher,arielglenn,cmjohnson,dzahn,lcarr,jgreen,faidon liambotis,mwalker,katie horn,pgehres,catrope,akosiaris,springle,ori.livneh
+authorized_for_configuration_information=tim starling,robh,mark bergsma,domas,ryan lane,asher,arielglenn,cmjohnson,dzahn,lcarr,jgreen,faidon liambotis,mwalker,katie horn,pgehres,catrope,akosiaris,springle,ori.livneh,gage
 
 
 
@@ -155,7 +155,7 @@ authorized_for_configuration_information=tim starling,robh,mark bergsma,domas,ry
 # You may use an asterisk (*) to authorize any user who has
 # authenticated to the web server.
 
-authorized_for_system_commands=tim starling,robh,mark bergsma,domas,ryan lane,asher,arielglenn,cmjohnson,dzahn,lcarr,jgreen,faidon liambotis,mwalker,katie horn,pgehres,catrope,akosiaris,springle,ori.livneh
+authorized_for_system_commands=tim starling,robh,mark bergsma,domas,ryan lane,asher,arielglenn,cmjohnson,dzahn,lcarr,jgreen,faidon liambotis,mwalker,katie horn,pgehres,catrope,akosiaris,springle,ori.livneh,gage
 
 
 # GLOBAL HOST/SERVICE VIEW ACCESS
@@ -181,8 +181,8 @@ authorized_for_all_hosts=*
 # authorization).  You may use an asterisk (*) to authorize any
 # user who has authenticated to the web server.
 
-authorized_for_all_service_commands=tim starling,robh,mark bergsma,domas,ryan lane,asher,arielglenn,cmjohnson,dzahn,lcarr,jgreen,faidon liambotis,mwalker,katie horn,pgehres,catrope,akosiaris,springle,ori.livneh
-authorized_for_all_host_commands=tim starling,robh,mark bergsma,domas,ryan lane,asher,arielglenn,cmjohnson,dzahn,lcarr,jgreen,faidon liambotis,mwalker,katie horn,pgehres,catrope,akosiaris,springle,ori.livneh
+authorized_for_all_service_commands=tim starling,robh,mark bergsma,domas,ryan lane,asher,arielglenn,cmjohnson,dzahn,lcarr,jgreen,faidon liambotis,mwalker,katie horn,pgehres,catrope,akosiaris,springle,ori.livneh,gage
+authorized_for_all_host_commands=tim starling,robh,mark bergsma,domas,ryan lane,asher,arielglenn,cmjohnson,dzahn,lcarr,jgreen,faidon liambotis,mwalker,katie horn,pgehres,catrope,akosiaris,springle,ori.livneh,gage
 
 
 
