auto-install: disable swap on appservers (mw.cfg)
Disable swap on all (new) appservers. While at it, cleanup preseed.cfg
lines for mw.cfg by removing some stale entries and splitting up the
existing one per role.

There's likely some roles that will need a different profile than the
appserver one, let's do these when the time comes.

Change-Id: Iea1809dcde2e588c2a053598f9c23ec6abf02658

--- a/modules/install-server/files/autoinstall/partman/mw.cfg
+++ b/modules/install-server/files/autoinstall/partman/mw.cfg
@@ -1,4 +1,4 @@
-#Mediawiki. Takes the disk and makes a 8gig swap, 50gig /tmp, and the rest in / . Single disk, ext3 only
+#Mediawiki. Takes the disk and makes a 50gig /tmp, and the rest in / . Single disk, ext3 only
 
 # Application server specific configuration
 
@@ -10,14 +10,13 @@ d-i	partman-auto/disk					string	/dev/sda
 d-i	partman/choose_partition	select Finish partitioning and write changes to disk
 d-i	partman/confirm	boolean	true
 
+# no swap
+d-i	partman-basicfilesystems/no_swap	boolean	false
 
 d-i	partman-auto/expert_recipe	string	apache :	\
 	64	1000	10000000	ext4				\
 	$primary{ } $bootable{ } method{ format } format{ }	\
 	use_filesystem{ } filesystem{ ext4 } mountpoint{ / }	\
-	.					\
-	8000	8000	8000	linux-swap			\
-	$primary{ } method{ swap } format{ }		\
 	.					\
 	20000	20000	20000	ext4				\
 	$primary{ } method{ format } format{ }		\
@@ -26,7 +25,6 @@ d-i	partman-auto/expert_recipe	string	apache :	\
 d-i	partman-auto/choose_recipe			apache
 
 # Preseeding of other packages
-#fontconfig	fontconfig/enable_bitmaps	boolean	true
 d-i	partman/confirm_write_new_label		boolean	true
 d-i	partman/choose_partition			select	finish
 d-i	partman/confirm						boolean	true
