--- a/modules/install-server/files/autoinstall/netboot.cfg
+++ b/modules/install-server/files/autoinstall/netboot.cfg
@@ -39,6 +39,7 @@ d-i	preseed/include_command	string	\
 		analytics102[3-7]) echo partman/analytics-dell.cfg ;; \
 		db[0-8][0-9]|db10[0-6][0-9]|es10[0-2][0-9]|es[0-9]|es1[0-9]) echo partman/db.cfg ;; \
 		netmon1001|stat1002|tungsten) echo partman/db.cfg ;; \
+		bast*) echo partman/lvm.cfg ;; \
 		boron|chromium|hydrogen) echo partman/lvm.cfg ;; \
 		calcium|helium|potassium|tmh1001|tmh1002) echo partman/raid1-1partition.cfg ;; \
 		capella) echo partman/lvs.cfg ;; \
@@ -51,10 +52,8 @@ d-i	preseed/include_command	string	\
 		eeden) echo partman/raid1-1partition.cfg ;; \
 		erzurumi) echo partman/raid1-1partition.cfg ;; \
 		iodine) echo partman/raid1-1partition.cfg ;; \
-		lithium|beryllium) echo partman/mw.cfg ;; \
 #		sodium) echo partman/mailserver.cfg ;; \
 		mc[1-9]*) echo partman/mc.cfg ;; \
-		mobile100[0-9]) echo partman/mw.cfg ;; \
 		ms[1-3]) echo partman/raid1-1partition-thumper.cfg ;; \
 		ms-fe[1-4]) echo partman/raid1-1partition.cfg ;; \
 		ms-be[1-9]|ms-be1[0-2]) echo partman/ms-be-ssd.cfg ;; \
@@ -62,8 +61,8 @@ d-i	preseed/include_command	string	\
 		ms-be10[0-9][0-9]) echo partman/ms-be-eqiad.cfg ;; \
 		ms-fe30[0-9][0-9]) echo partman/raid1-1partition.cfg ;; \
 		ms-be30[0-9][0-9]) echo partman/ceph-ssd.cfg ;; \
-		labsdb[1-3]|mw[0-9]*|srv[0-9]*|bast*) echo partman/mw.cfg ;; \
-		labsdb100[1-3]) echo partman/mw.cfg ;; \
+		mw[0-9]*|srv[0-9]*) echo partman/mw.cfg ;; \
+		labsdb[1-3]|labsdb100[1-3]) echo partman/mw.cfg ;; \
 		nickel) echo partman/raid1.cfg ;; \
 		osm-cp*) echo partman/mw.cfg ;; \
 		pc[1-3]|pc100[1-3]) echo partman/mw.cfg ;; \
