--- a/modules/install-server/files/autoinstall/netboot.cfg
+++ b/modules/install-server/files/autoinstall/netboot.cfg
@@ -33,7 +33,7 @@ d-i	preseed/include_command	string	\
 	case $(debconf-get netcfg/get_hostname) in \
 		amslvs*) echo partman/raid1-squid.cfg ;; \
 		amssq4[7-9]|amssq[56][0-9]) echo partman/raid1-varnish.cfg ;; \
-		amssq*|sq[3-8][0-9]) echo partman/raid1-squid.cfg ;; \
+		amssq*|sq[6][7-9]|sq70) echo partman/raid1-squid.cfg ;; \
 		analytics100[1-9]|analytics1010) echo partman/analytics-cisco.cfg ;; \
 		analytics101[1-9]|analytics102[0-2]) echo partman/raid1-30G.cfg ;; \
 		analytics102[3-7]) echo partman/analytics-dell.cfg ;; \
