remove amssq31-46 from dsh and other squid related manifests
they will be reinstalled as varnish hosts later (rt #6523)
so we keep dhcp entries, adjust netboot.conf for the new use

Change-Id: Ice56f660cd89bfe6f9179d23c4f578b55a09f37e

--- a/modules/install-server/files/autoinstall/netboot.cfg
+++ b/modules/install-server/files/autoinstall/netboot.cfg
@@ -32,7 +32,7 @@ d-i	preseed/include_command	string	\
 	\
 	case $(debconf-get netcfg/get_hostname) in \
 		amslvs*) echo partman/raid1-squid.cfg ;; \
-		amssq4[7-9]|amssq[56][0-9]) echo partman/raid1-varnish.cfg ;; \
+		amssq3[1-9]|amssq4[0-9]|amssq[56][0-9]) echo partman/raid1-varnish.cfg ;; \
 		amssq*|sq[6][7-9]|sq70) echo partman/raid1-squid.cfg ;; \
 		analytics100[1-9]|analytics1010) echo partman/analytics-cisco.cfg ;; \
 		analytics101[1-9]|analytics102[0-2]) echo partman/raid1-30G.cfg ;; \
