--- a/modules/install-server/files/autoinstall/netboot.cfg
+++ b/modules/install-server/files/autoinstall/netboot.cfg
@@ -76,7 +76,7 @@ d-i	preseed/include_command	string	\
 		solr[1-3]|solr100[1-3]) echo partman/lvm.cfg ;; \
 		virt[5-9]|virt1[0-6]) echo partman/virt-raid10-cisco.cfg ;; \
 		virt100[1-9]) echo partman/virt-raid10-cisco.cfg ;; \
-		labnet1001 echo partman/lvm.cfg ;; \
+		labnet1001) echo partman/lvm.cfg ;; \
 		wtp100[5-9]|wtp10[1-2][0-9]carbon|hafnium) echo partman/raid1-lvm.cfg ;; \
 		ersch|hydrogen|krypton|tarin) echo partman/raid1-1partition.cfg ;; \
 	esac
