Give myself some icinga privs
Change-Id: I710e2b30c9c5bcd0e235bb50c4ae4453e6d9629b

--- a/files/icinga/cgi.cfg
+++ b/files/icinga/cgi.cfg
@@ -181,8 +181,8 @@ authorized_for_all_hosts=*
 # authorization).  You may use an asterisk (*) to authorize any
 # user who has authenticated to the web server.
 
-authorized_for_all_service_commands=tim starling,robh,mark bergsma,domas,ryan lane,asher,arielglenn,cmjohnson,dzahn,lcarr,jgreen,faidon liambotis,mwalker,katie horn,pgehres,catrope,alexandros kosiaris,springle,ori.livneh,gage
-authorized_for_all_host_commands=tim starling,robh,mark bergsma,domas,ryan lane,asher,arielglenn,cmjohnson,dzahn,lcarr,jgreen,faidon liambotis,mwalker,katie horn,pgehres,catrope,alexandros kosiaris,springle,ori.livneh,gage
+authorized_for_all_service_commands=tim starling,robh,mark bergsma,domas,ryan lane,asher,arielglenn,cmjohnson,dzahn,lcarr,jgreen,faidon liambotis,mwalker,katie horn,pgehres,catrope,alexandros kosiaris,springle,ori.livneh,gage,andrew bogott
+authorized_for_all_host_commands=tim starling,robh,mark bergsma,domas,ryan lane,asher,arielglenn,cmjohnson,dzahn,lcarr,jgreen,faidon liambotis,mwalker,katie horn,pgehres,catrope,alexandros kosiaris,springle,ori.livneh,gage,andrew bogott
 
 
 
