dynamicproxy: Enable XFF based on a parameter
So other dynamic proxies (such as toollabs) do not get
XFF set unexpectedly.

Change-Id: I17a4ae5c9696446e601e80fe601adff63d527f34

--- a/modules/dynamicproxy/templates/proxy.conf
+++ b/modules/dynamicproxy/templates/proxy.conf
@@ -69,7 +69,9 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
 
+        <%- if @set_xff -%>
         # Passes client's IP to the backend
         proxy_set_header X-Forwarded-For $remote_addr;
+        <%- end -%>
     }
 }
