librenms: workaround JunOS stupidness
Our librenms host is now dual-stacked (A & AAAA). JunOS (or at least the
version that we're running) is stupid, and treats a log target of "host
$hostname" with a dual stacked hostname as two log targets, multiplying
all log lines by two. Until a better fix is in place, bind rsyslog to
IPv4 only.

Change-Id: I4a911a3fad9c0d6c27796f7f2cd1bcba16e5eff8

--- a/modules/librenms/files/rsyslog.conf
+++ b/modules/librenms/files/rsyslog.conf
@@ -1,9 +1,9 @@
 $ModLoad imudp
+$UDPServerAddress 0.0.0.0
 $UDPServerRun 514
 
 $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 $PreserveFQDN on
-$RepeatedMsgReduction on
 
 $PrivDropToUser librenms
 $PrivDropToGroup librenms
