Deploy scholarships with scap3
Bug: T129134
Change-Id: I24094dd9335b930f9933d8f58d53f5be3ae25e23

--- a/hieradata/role/common/deployment_server.yaml
+++ b/hieradata/role/common/deployment_server.yaml
@@ -139,6 +139,9 @@ scap::sources:
     repository: maps/tilerator/deploy
 #    lvs_service: tilerator
   trending-edits/deploy: {}
+  # Wikimania scholarships app
+  scholarships/scholarships:
+    repository: wikimedia/wikimania-scholarships
   wdqs/wdqs:
     repository: wikidata/query/deploy
 #    lvs_service: wdqs
