Deploy scholarships with scap3
Bug: T129134
Depends-On: Ibf70cc31bb0dc6e0dce366cdc5b5eb46cbc242e7
Change-Id: I24094dd9335b930f9933d8f58d53f5be3ae25e23

--- a/hieradata/labs/deployment-prep/common.yaml
+++ b/hieradata/labs/deployment-prep/common.yaml
@@ -338,6 +338,10 @@ scap::sources:
   prometheus/jmx_exporter:
     repository: operations/software/prometheus_jmx_exporter
 
+  # Wikimania scholarships app
+  scholarships/scholarships:
+    repository: wikimedia/wikimania-scholarships
+
 prometheus_nodes:
   - deployment-prometheus01.deployment-prep.eqiad.wmflabs
 profile::recommendation_api::wdqs_uri: http://wdqs-test.wmflabs.org
