Gerrit: Enable logstash by default for prod gerrit
Following up Ia188741c0a699ce9f238f85cd3ec710f7ec7d414

Bug: T141324
Change-Id: I00fa3c6833e630dfbf6446f7308c892bd133f1fc

--- a/hieradata/role/common/gerrit/server.yaml
+++ b/hieradata/role/common/gerrit/server.yaml
@@ -31,7 +31,7 @@ gerrit::jetty::replication:
         mirror: true
         replicateProjectDeletions: true
         replicateHiddenProjects: true
-# gerrit::jetty::log_host: 'logstash1002.eqiad.wmnet'
+gerrit::jetty::log_host: 'logstash.svc.eqiad.wmnet'
 
 # Allow use of supplemental key for scap deployment
 profile::base::ssh_server_settings:
