Gerrit: Add non-masters to have public DNS entries
This way, you can have public & private slaves. Public slaves
get nice DNS entries that aren't the standard hostname

Change-Id: I4ce94cb92d959d2598b2e338a11f0f5a1b4a239d

--- a/hieradata/role/common/gerrit/server.yaml
+++ b/hieradata/role/common/gerrit/server.yaml
@@ -3,6 +3,8 @@ admin::groups:
   - gerrit-admin
 
 gerrit::server::host: 'gerrit.wikimedia.org'
+gerrit::server::slave_hosts:
+    - 'gerrit-slave.wikimedia.org'
 gerrit::server::master_host: 'cobalt.wikimedia.org'
 gerrit::server::bacula: 'srv-gerrit-git'
 gerrit::server::config: 'gerrit.config.erb'
