Add /data/ Redirect for commons
This is the first wiki to have it.
All other wikis should have it at some point.

Bug: T163922
Change-Id: I559e895db090ca35222f1f811a9b1b8854122b19

--- a/modules/mediawiki/files/apache/sites/remnant.conf
+++ b/modules/mediawiki/files/apache/sites/remnant.conf
@@ -80,6 +80,9 @@
     # Uploads are offsite
     RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/wikipedia/commons/$1 [R=302]
 
+    # /data/ path T163922
+    RewriteRule ^/data/(.*)/(.*)$ {ENV:RW_PROTO}://commons.wikimedia.org/wiki/Special:PageData/$1/$2 [R=301,QSA]
+
     Include "sites-enabled/api-rewrites.incl"
 
     <Directory "/srv/mediawiki/docroot/wikimedia.org/w">
