Expose wbqc_constraints view on Wiki Replicas
Add a public view for the table used by the WikibaseQualityConstraints
extension to record constraints on Wikidata properties.

Prior to T169647, the table is populated by periodically (every few
weeks to months) importing constraints from property talk pages on
Wikidata using [ConstraintsFromTemplates], and reading the resulting CSV
file into the database using the extension's UpdateConstraintsTable
maintenance script.

Following T169647, the table is populated by the constraintsTableUpdate
job, which imports constraints from statements on the property entity
and is enqueued by a hook that runs when properties are edited.

In both cases, the table is entirely populated from public data, so I
believe it can be made available without problems.

[ConstraintsFromTemplates]: https://github.com/WikidataQuality/ConstraintsFromTemplates

Bug: T170927
Change-Id: I8a50ed367c14854232cb5800382980c8b96e77bf

--- a/modules/role/templates/labs/db/views/maintain-views.yaml
+++ b/modules/role/templates/labs/db/views/maintain-views.yaml
@@ -124,6 +124,7 @@ fullviews:
   - wb_property_info
   - wb_terms
   - wbc_entity_usage
+  - wbqc_constraints
   - wbs_propertypairs
   - watchlist_count
 
