--- a/hieradata/role/eqiad/wdqs.yaml
+++ b/hieradata/role/eqiad/wdqs.yaml
@@ -1,3 +1,1 @@
-lvs::realserver::realserver_ips:
-    - '10.2.2.32' # wdqs.svc.eqiad.wmnet
-wdqs::blazegraph_options: '-Dhttp.proxyHost=webproxy.eqiad.wmnet -Dhttp.proxyPort=8080 -XX:+ExitOnOutOfMemoryError'
+profile::wdqs::blazegraph_options: '-Dhttp.proxyHost=webproxy.eqiad.wmnet -Dhttp.proxyPort=8080 -XX:+ExitOnOutOfMemoryError'
