redis - instance names should be strings in puppet 4
Since the redis instances (`profile::redis::master::instances`) are used
as resource titles, they should be strings.

I found this error while checking maps for compatibility with puppet 4. OCG
is affected as well.

Change-Id: I8c65d0039d84bec38c639bfd3b25f5dbc66182a9

--- a/hieradata/role/common/maps/master.yaml
+++ b/hieradata/role/common/maps/master.yaml
@@ -27,6 +27,6 @@ service::configuration::statsd_host: 'statsd.eqiad.wmnet'
 cassandra::metrics::blacklist:
   - .*\.metrics\.Table\..*$
 
-profile::redis::master::instances: [6379]
+profile::redis::master::instances: ['6379']
 profile::redis::master::settings:
   bind: "0.0.0.0"
