--- a/hieradata/role/common/maps/test/master.yaml
+++ b/hieradata/role/common/maps/test/master.yaml
@@ -24,7 +24,7 @@ service::configuration::statsd_host: 'statsd.eqiad.wmnet'
 cassandra::metrics::blacklist:
   - .*\.metrics\.Table\..*$
 
-profile::redis::master::instances: [6379]
+profile::redis::master::instances: ['6379']
 profile::redis::master::settings:
   bind: "0.0.0.0"
 
