--- a/hieradata/role/common/ocg.yaml
+++ b/hieradata/role/common/ocg.yaml
@@ -7,7 +7,7 @@ ocg::redis_port: 6379
 ocg::statsd_host: "statsd.eqiad.wmnet"
 ocg::graylog_host: "logstash1002.eqiad.wmnet"
 role::ocg::tmpfs_size: '32G'
-profile::redis::master::instances: [6379]
+profile::redis::master::instances: ['6379']
 profile::redis::master::settings:
   maxmemory: "2gb"
   save: ""
