--- a/modules/rsyslog/templates/receiver.erb.conf
+++ b/modules/rsyslog/templates/receiver.erb.conf
@@ -1,9 +1,24 @@
-# receive remote syslog via UDP
+# make gtls driver the default netstream
+$DefaultNetstreamDriver gtls
+$DefaultNetstreamDriverCAFile /var/lib/puppet/ssl/certs/ca.pem
+$DefaultNetstreamDriverCertFile /etc/rsyslog-receiver/ssl/cert.pem
+$DefaultNetstreamDriverKeyFile /etc/rsyslog-receiver/ssl/server.key
 
+# TCP configuration
+$ModLoad imtcp
+# Validate clients by trust and subject name
+# http://www.rsyslog.com/doc/v8-stable/concepts/ns_gtls.html
+$InputTCPServerStreamDriverAuthMode x509/name
+$InputTCPServerStreamDriverMode 1 # run driver in TLS-only mode
+input(type="imtcp" port="<%= @tcp_port %>" ruleset="remote_syslog")
+
+
+# UDP configuration
 $ModLoad imudp
-
 input(type="imudp" port="<%= @udp_port %>" ruleset="remote_syslog")
 
+
+# Common rulesets for syslog receiver
 ruleset(name="remote_syslog") {
     # apache2 filters
     if $programname == "apache2" then {
