wdqs - allow wdqs-admins to pool / depool servers
For maintenance operations, Stas (or other wdqs admins) should be able to
pool / depool on their own.

Bug: T172798
Change-Id: Iea94a1a2f1e2c756fc35eecd3ee7b9286e4db0c8

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -370,7 +370,9 @@ groups:
                  'ALL = NOPASSWD: /bin/systemctl mask wdqs-updater',
                  'ALL = NOPASSWD: /bin/systemctl unmask wdqs-updater',
                  'ALL = (blazegraph) NOPASSWD: ALL',
-                 'ALL = NOPASSWD: /bin/journalctl *']
+                 'ALL = NOPASSWD: /bin/journalctl *',
+                 'ALL = NOPASSWD: /usr/local/bin/depool',
+                 'ALL = NOPASSWD: /usr/local/bin/pool']
   mailman-admins:
     gid: 757
     description: Admins for mailman
