openstack: keystone as module/profile/role for deployments
Bug: T171494
Change-Id: I1167b5dac438f2127def1009c07410b31aa0127f

--- a/hieradata/codfw/profile/openstack/labtestn.yaml
+++ b/hieradata/codfw/profile/openstack/labtestn.yaml
@@ -2,3 +2,5 @@ profile::openstack::labtestn::version: 'liberty'
 profile::openstack::labtestn::nova_controller: 'labtestcontrol2003.wikimedia.org'
 profile::openstack::labtestn::rabbit_monitor_user: 'monitoring'
 profile::openstack::labtestn::rabbit_file_handles: 8192
+profile::openstack::labtestn::osm_host: 'labtestnwikitech.wikimedia.org'
+profile::openstack::labtestn::ldap_hosts: ['labtestservices2001.wikimedia.org']
