openstack: keystone as module/profile/role for deployments
Bug: T171494
Change-Id: I1167b5dac438f2127def1009c07410b31aa0127f

--- a/hieradata/eqiad/profile/openstack/main.yaml
+++ b/hieradata/eqiad/profile/openstack/main.yaml
@@ -1,4 +1,7 @@
 profile::openstack::main::version: 'liberty'
 profile::openstack::main::nova_controller: 'labcontrol1001.wikimedia.org'
+profile::openstack::main::osm_host: 'wikitech.wikimedia.org'
 profile::openstack::main::rabbit_monitor_user: 'monitoring'
 profile::openstack::main::rabbit_file_handles: 8192
+profile::openstack::main::keystone::db_host: 'm5-master.eqiad.wmnet'
+profile::openstack::main::keystone::token_driver: 'normal'
