--- a/hieradata/codfw/profile/openstack/labtest.yaml
+++ b/hieradata/codfw/profile/openstack/labtest.yaml
@@ -1,4 +1,7 @@
 profile::openstack::labtest::version: 'liberty'
 profile::openstack::labtest::nova_controller: 'labtestcontrol2001.wikimedia.org'
 profile::openstack::labtest::rabbit_monitor_user: 'monitoring'
-profile::openstack::labtest::rabbit_file_handles: 1024
+profile::openstack::labtest::rabbit_file_handles: 8192
+profile::openstack::labtest::osm_host: 'labtestwikitech.wikimedia.org'
+profile::openstack::labtest::keystone::db_host: 'labtestcontrol2001.wikimedia.org'
+profile::openstack::labtest::keystone::token_driver: 'normal'
