Phabricator: Block vandalism IP that repeatedly added comments / uploaded files
Change-Id: I42707bdbf081257f1b96125d4c56da3a8f9eb694

--- a/modules/phabricator/files/apache/phabbanlist.conf
+++ b/modules/phabricator/files/apache/phabbanlist.conf
@@ -64,3 +64,6 @@ Require not ip 154.0.0.0/8
 Require not ip 160.160.0.0/12
 Require not ip 196.64.0.0/11
 Require not ip 197.128.0.0/14
+
+# vandalism in 07-08/2017
+Require not ip 220.134.46.118
