Phabricator: Override the frog token's label
Bug: T173208
Change-Id: I34a6efc68ae17fce8b76d832a7fd0c0c29f8345f

--- a/modules/phabricator/data/fixed_settings.yaml
+++ b/modules/phabricator/data/fixed_settings.yaml
@@ -228,6 +228,8 @@ translation.override:
   'Do you want to export the query results to Excel?': 'Do you want to export the query results?'
   # T865
   'You can also create tasks by sending an email to: %s': 'You can also create tasks by sending an email to: %s (<a href="https://www.mediawiki.org/wiki/Special:MyLanguage/Phabricator/Help#Using_e-mail" tabindex="-1" target="_blank">learn more</a>)'
+  # T173208
+  'Dat Boi': 'Insectivore'
 
 # We don't host local docs or use the wiki :)
 phabricator.uninstalled-applications:
