wdqs - send logs to logstash
Move all logging configuration to Puppet, with appropriate entries to send
logs to logstash.

The logstash config of wdqs::gui has been reworked to remove some duplication.

Bug: T172710
Change-Id: Ia33bea9e7b95e9b02c5c465b284b12c26126e8c2

--- a/hieradata/labs/wikidata-query/common.yaml
+++ b/hieradata/labs/wikidata-query/common.yaml
@@ -1,4 +1,4 @@
-profile::wdqs::log_aggregator: 'deployment-logstash2.deployment-prep.eqiad.wmflabs:10514'
+profile::wdqs::logstash_host: 'deployment-logstash2.deployment-prep.eqiad.wmflabs'
 profile::wdqs::use_git_deploy: false
 profile::wdqs::package_dir: '/srv/wdqs/blazegraph'
 profile::wdqs::data_dir: '/srv/wdqs/blazegraph'
