--- a/hieradata/role/common/wdqs.yaml
+++ b/hieradata/role/common/wdqs.yaml
@@ -1,4 +1,4 @@
-profile::wdqs::log_aggregator: 'logstash1001.eqiad.wmnet:10514'
+profile::wdqs::logstash_host: 'logstash.svc.eqiad.wmnet'
 profile::wdqs::use_git_deploy: true
 profile::wdqs::package_dir: '/srv/deployment/wdqs/wdqs'
 profile::wdqs::data_dir: '/srv/wdqs'
