--- a/hieradata/role/common/wdqs.yaml
+++ b/hieradata/role/common/wdqs.yaml
@@ -2,6 +2,7 @@ wdqs::gui::log_aggregator:  'logstash1001.eqiad.wmnet:10514'
 wdqs::updater::options: '-n wdq -- -b 500 -T 1200'
 wdqs::service::config_file: /etc/wdqs/RWStore.properties
 wdqs::endpoint: 'https://query.wikidata.org'
+wdqs::logstash_host: 'logstash.svc.eqiad.wmnet'
 admin::groups:
   - wdqs-admins
 cluster: wdqs
