Set elasticsearch servers to use 128kB readahead
128kB is the default readahead that is used in most circumstances by the
linux kernel. For some reason though the raid0 arrays on elastic1017-31
decided to use a readahead of 2048kB. This leads to them bringing in
signifcant amounts of unnecessary data and reduces the ability of the
page cache to buffer the data elasticsearch needs.

Bug: T169498
Change-Id: Idbf8d88aadbaaae64b595d2f0d08f596e15f1457

--- a/hieradata/labs/deployment-prep/common.yaml
+++ b/hieradata/labs/deployment-prep/common.yaml
@@ -253,6 +253,8 @@ profile::elasticsearch::search_shard_count_limit: 1000
 # this to match cpu counts to prevent overcommit of CPU resources.
 profile::elasticsearch::search_thread_pool_executors: 4
 
+profile::elasticsearch::storage_device: dm-0
+
 role::logstash::collector::statsd_host: labmon1001.eqiad.wmnet
 "redis::shards":
   jobqueue: &labs_shards
