--- a/hieradata/role/codfw/elasticsearch/cirrus.yaml
+++ b/hieradata/role/codfw/elasticsearch/cirrus.yaml
@@ -63,3 +63,5 @@ profile::base::dns_alt_names:             'search.svc.codfw.wmnet'
 
 # Allow reindex from eqiad to codfw
 profile::elasticsearch::reindex_remote_whitelist: 'search.svc.eqiad.wmnet:9243'
+
+profile::elasticsearch::storage_device: dm-0
