--- a/hieradata/role/eqiad/elasticsearch/relforge.yaml
+++ b/hieradata/role/eqiad/elasticsearch/relforge.yaml
@@ -22,3 +22,5 @@ profile::elasticsearch::certificate_name: 'relforge.svc.eqiad.wmnet'
 profile::base::dns_alt_names:             'relforge.svc.eqiad.wmnet'
 
 has_lvs: false
+
+profile::elasticsearch::storage_device: dm-0
